# dagpipe

./: .gitignore  AGENTS.md  BLUEPRINT.md  HANDOFF.md  PROJECT_STATUS.md  README.md  pyproject.toml
legacy/amm/: __init__.py  checkpoints.py  config.py  constrained.py  context.py  dag.py  dag_config.yaml  db.py  memory.py  nodes.py  router.py  scheduler.py  schemas.py  state_machine.py  version_fetcher.py
src/dagpipe/: checkpoints.py  constrained.py  dag.py  router.py
tests/: test_checkpoints.py  test_constrained.py  test_dag.py  test_router.py
